--- a/_posts/Git/2019-02-10-git01.md
+++ b/_posts/Git/2019-02-10-git01.md
@@ -5,15 +5,9 @@ category: Git
 tags: [Git]
 ---
 
+#### 
 
-
-
-
-
-
-
-
-
+#### 
 
 # 버전 만들기(init, status, add, commit)
 
@@ -33,7 +27,6 @@ tags: [Git]
 
 
 - git 버젼에 대한 이름 & 이메일 정보 설정하기
-
 ```bash
 git config --global user.name 'Harry Lee'
 git config --global user.email 'sinyo0523@gmail.com'
@@ -42,14 +35,13 @@ git config --global user.email 'sinyo0523@gmail.com'
 
 
 - `git bash` 로 파일 조작하기
-
 ```bash
 #파일 생성
 vim f1.txt
 
 #알파벳 i 누르면 입력을 할 수 있게 설정이 변경됨.
 ~
-f1.txt [unix] (08:59 01/01/1970)                                        0,1 모두
+f1.txt [unix] (08:59 01/01/1970)                                        
 -- 끼워넣기 --
 
 #내용 입력 후 esc 누르면 입력이 종료됨.
@@ -67,9 +59,9 @@ $ cat f1.txt
 source : 1
 ```
 
+#### 
 
-
-
+#### 
 
 # 변경사항 확인하기(log, diff)
 
@@ -77,11 +69,12 @@ source : 1
 - `git diff '커밋 id1'..'커밋id2'`  : 버젼과 버젼 사이의 소스코드의 차이점을 확인
 - `git diff` : git add 하기 전과 add 후의 파일 내용을 비교 할 때 사용.  
 
+#### 
 
-
-
+#### 
 
 # 과거로 돌아가기(reset)
 
-- git reset '커밋 id' --hard` : 해당 버젼으로 돌아감
+- `git reset '커밋 id' --hard` : 해당 버젼으로 돌아감
 - `git revert '커밋 id'` : 해당 버젼으로 돌아가되,  그 내용을 새로운 버전으로 만드는 명령
+
