--- a/_posts/Git/2019-02-10-git02(git의원리).md
+++ b/_posts/Git/2019-02-10-git02(git의원리).md
@@ -5,7 +5,7 @@ category: Git
 tags: [Git]
 ---
 
-
+<br>
 
 # 분석도구 gistory
 
@@ -33,42 +33,30 @@ Hit Ctrl-C to quit.
 
 
 
-
+<br>
 
 # git add의 원리
 
 - 파일을 생성해도 gistory에는 아무런 변화가 없음. 파일 생성에는 git은 아무런 관여를 하지않음.
-
 - `git add`  시, `.\index` 와  `\objects\`  가 gist에 새로 생성됨.
-
   - 파일의 이름은 index에 담겨지고, 파일의 내용은 objects에 담겨짐. 
   - objects에 담겨있는 파일을 object 또는 객체라고 부름
-
-- **git은 어떠한 파일을 저장할 때, 파일의 이름이 달라도, 내용이 같으면, 같은 object 파일을 가리킴**
-
-  => 이는 중복을 제거해 줌.
+- **git은 어떠한 파일을 저장할 때, 파일명이 달라도, 내용이 같으면, 같은 object 파일을 가리킴**
+  - 이는 중복을 제거해 줌.
 
 
 
 ### objects 파일명의 원리
 
 - git add의 원리: 내용이 같으면 파일의 이름이 같다. 내용을 기반으로 해서 파일의 이름이 결정되는 매커니즘
-
   - SHA1 해쉬 알고리즘 (http://www.sha1-online.com/)
-
 - 특정한 텍스트를 입력하면 SHA1 해쉬 알고리즘을 통해 어떠한 일정한 길이의 텍스트가 출력됨
   - hello : aaf4c61ddcc5e8a2dabede0f3b482cd9aea9434d
   - hi: c22b5f9178342609428d6f51b2c5af4c0bde6a42
-
 - hello라는 정보가 담긴 파일의 내용을 git으로 관리한다고 가정하면, 
-
-  SHA1 해쉬 알고리즘을 통해 결과값을 도출하며,  결과값에서 앞의 2글자(aa)를 떼서 objects 디렉토리 밑에 
-  새로운 디렉토리를 만들고, f4~fd로 끝나는 파일을 만들어서 그안에 hello라는 정보를 저장함. 
-
+  SHA1 해쉬 알고리즘을 통해 결과값을 도출하며,  결과값에서 앞의 2글자(aa)를 떼서 objects 디렉토리 밑에 새로운 디렉토리를 만들고, f4~fd로 끝나는 파일을 만들어서 그안에 hello라는 정보를 저장함. 
   - hello 라는 정보는 objects/aa/f4c61ddcc5e8a2dabede0f3b482cd9aea9434d  파일에 저장됨.
-
 - 어떠한 파일에 대하여 git add를 하게 되면,
-
   - git은 사용자가 add 한 파일의 내용(예; a) 을 살펴 봄.  
   -  a 라는 정보와 부가적인 정보를 추가해서 압축함
   - 압축한 결과를 SHA1 해쉬 알고리즘 통해  hash 결과 값을 도출 함.
@@ -77,32 +65,23 @@ Hit Ctrl-C to quit.
 
 
 
-
+<br>
 
 # git commit의 원리
 
 - commit 메세지에 해당 하는 정보가 objects 라는 디렉토리안에 저장됨.
-
 - commit(버전)도 파일의 내용처럼 objects 안에 들어감 => 내부적으로 commit 도 object(객체)라 할 수 있음.
 
   
-
-
-
 ### Commit의 2가지 주요 정보
 
 - parent: 이전 commit이 누군지? 부모를 나타냄
-
 - tree: 커밋이 일어난 시점에 우리의 작업 디렉토리의 파일의 이름과, 파일의 이름이 담고 있는 내용 사이의 정보
-
   - 각각의 버전마다 서로 다른 tree를 가르키며, 각 tree에는  우리가 작성한 버전에 해당되는 파일의 이름과 내용이 링크로 연결되어 있음
   - 이 버전에 적혀있는 트리를 통해서 버전이 만들어진 시점에 대한 프로젝트 상태를 얻을 수 있음
   - 사진을 찍었다 라는 표현으로 snapshot이라하며, snapshot을 트리라는 정보구조를 통해 가지고 있음.
 
-  
-
 - object 디렉토리안에는 object 파일이 들어가며 다음과 같이 3가지로 분류됨
-
   - blob: 파일의 내용을 담고있음
   - tree: 디렉토리의 파일 명과 파일명에 해당하는 내용(blob)의 정보를 담고있음
   - commit: commit에 대한 정보가  담김 (parent, tree, comitter, commit id)
@@ -156,7 +135,7 @@ committer Harry Lee <tothefullest08@gmail.com> 1549785964 +0900
 
 
 
-
+<br>
 
 # git status의 원리
 
@@ -186,13 +165,9 @@ no changes added to commit (use "git add" and/or "git commit -a")
 
 
 >   **- Working Directory (work space):** 작업할 파일이 있는 디렉토리입니다.
->
->   **- Staging Area (index, cache) :** 커밋(Commit)을 수행할 파일들이 올라가는 영역입니다.
->
+>   **- Staging Area (index, cache) :** 커밋을 수행할 파일들이 올라가는 영역입니다.
 >   **- Git Directory:** Git 프로젝트의 메타 데이터와 데이터 정보가 저장되는 디렉토리입니다.
->
 > 출처: https://ndb796.tistory.com/187 [안경잡이개발자]
-
 
 
 
