--- a/_posts/TIL/2019-02-11-TIL.md
+++ b/_posts/TIL/2019-02-11-TIL.md
@@ -14,17 +14,16 @@ tags: [TIL]
 
 마크다운 - 코드박스에 작성된 내용이 길 경우, 블로그의 Body 공간이 초과되어 코드블럭 하단에 스크롤바가 생겨버렸다. body 부분의 space를 조절하는 css 파일을 찾는데 엄청난 시간이 소비 되었다.
 
-   - github내에 다른 분들의 코드를 참조해서 이것저것 수정하여 다행히 고쳤긴한데..  실제로 어떤 코드로 인해서 그부분이 수정되었는지 아직까지 감이 안온다. </p>
-   - 이 블로그는 [codinfox](https://github.com/codinfox/codinfox-lanyon "codinfox") 템플릿을 사용했는데, 이 테마를 사용한 유저나 개발자 분들이 많지 않아, 관련 정보를 찾는데 더 고생을 한 것 같다. </p>
-   
+   - github내에 다른 분들의 코드를 참조해서 이것저것 수정하여 다행히 고쳤긴한데..  실제로 어떤 코드로 인해서 그부분이 수정되었는지 아직까지 감이 안온다.
+   - 이 블로그는 [codinfox](https://github.com/codinfox/codinfox-lanyon "codinfox") 템플릿을 사용했는데, 이 테마를 사용한 유저나 개발자 분들이 많지 않아, 관련 정보를 찾는데 더 고생을 한 것 같다.
    -  jekyll 템플릿에 대해 공부를 해야하겠다는 것이 절실히 느껴졌다.
 
 
-jekyll 로컬 서버가 실행 불가  (jekyll 3.8.5 | Error:  incompatible character encodings: CP949 and UTF- 8)
+jekyll 로컬 서버가 실행 불가  (jekyll 3.8.5 Error:  incompatible character encodings: CP949 and UTF- 8)
 
-   - 어제, Typora로 작성한 Markdown을 블로그에 올렸을 때, Markdown style이 제대로 되지 않아 하나하나를 수정 & 커밋을 하는, 굉장히 비효율적인 과정을 겪었었다. </p>
-   - 그래서, commit을 하기 전에 jekyll 로컬 서버로 업데이트된 화면을 실시간으로 보고 싶었으나 인코딩에러가 발생하였다. </p>
-   - 정말로 몇시간동안 삽질을 하다가 결국 윈도우에 저장된 사용자 계정 이름이 한글로 되어 있는 것이 문제라는 것을 알게 되어 지금까지 이 부분을 개선하는 중이다.</p>
+   - 어제, Typora로 작성한 Markdown을 블로그에 올렸을 때, Markdown style이 제대로 되지 않아 하나하나를 수정 & 커밋을 하는, 굉장히 비효율적인 과정을 겪었었다.
+   - 그래서, commit을 하기 전에 jekyll 로컬 서버로 업데이트된 화면을 실시간으로 보고 싶었으나 인코딩에러가 발생하였다.
+   - 정말로 몇시간동안 삽질을 하다가 결국 윈도우에 저장된 사용자 계정 이름이 한글로 되어 있는 것이 문제라는 것을 알게 되어 지금까지 이 부분을 개선하는 중이다.
 
 ---
 
