--- a/_posts/Web/2019-02-17-Web03.md
+++ b/_posts/Web/2019-02-17-Web03.md
@@ -109,6 +109,8 @@ tags: [Web, HTML, CSS]
 
 선택자란 말 그대로 선택을 해주는 요소를 말함. 이를 통해 특정 요소들을 선택하여 스타일을 적용 할 수 있게 됨.
 
+
+
 ### 전체 선택자
 
 - 선택자에 `*` 을 사용 할 경우, head 및 body 안의 모든 내용에 스타일이 적용 됨.
@@ -126,6 +128,8 @@ tags: [Web, HTML, CSS]
 </body>
 ```
 
+
+
 ### 태그 선택자
 
 - 스타일을 적용하고 싶은 태그명을 선택자에 입력하면, 그 태그에만 스타일이 적용됨.
@@ -142,6 +146,8 @@ tags: [Web, HTML, CSS]
     <h1>rosybrown, 태그 선택자</h1>
 </body>
 ```
+
+
 
 ### 클래스 선택자
 
@@ -161,6 +167,8 @@ tags: [Web, HTML, CSS]
     <h2 class="blue">blue, .클래스 선택자</h2>
 </body>
 ```
+
+
 
 ### 아이디 선택자
 
@@ -241,11 +249,11 @@ a[target="_self"] {
 
 | 선택자의 형태 | 설명                                                         |
 | ------------- | ------------------------------------------------------------ |
-| [속성="값"]   | 특정한 값인 태그 선택                                        |
-| [속성~="값"]  | 특정한 값을 단어로 포함하는 태그 선택 / 띄어쓰기 기준 (alt="바다 사진" / [alt~="바다"]) |
-| [속성\|="값"] | 특정한 값을 단어로 포함하는 태그 선택 / 하이픈 기준 (alt="바다-사진" / [alt\|="바다") |
-| [속성^="값"]  | 특정한 값으로 시작하는 태그 선택  (alt="apple banana" / [alt^="app"]) |
-| [속성$="값"]  | 특정한 값으로 끝나는 태그 선택 (href="ssafy.com/istj" / [href$="istj"]) |
+| [속성="값"]   | 특정 값인 태그 선택                                          |
+| [속성~="값"]  | 특정 값을 단어로 포함하는 태그 선택 / 띄어쓰기 기준 (alt="바다 사진" / [alt~="바다"]) |
+| [속성\|="값"] | 특정 값을 단어로 포함하는 태그 선택 / 하이픈 기준 (alt="바다-사진" / [alt\|="바다") |
+| [속성^="값"]  | 특정 값으로 시작하는 태그 선택  (alt="apple banana" / [alt^="app"]) |
+| [속성$="값"]  | 특정 값으로 끝나는 태그 선택 (href="ssafy.com/istj" / [href$="istj"]) |
 | [속성*="값"]  | 특정 값이 포함된 태그 선택(들어만 있으면 됨) (alt="미세먼지싫어" / [alt*="세먼지"]) |
 
 
@@ -257,7 +265,8 @@ a[target="_self"] {
 - 태그 vs 클래스: 클래스 선택자 우선
 - 태그 vs 아이디: 아이디 선택자 우선
 - 태그 vs 아이디 vs 클래스: 아이디 선택자 우선
-- 최종 우선 순위: 아이디 > 클래스 > 태그 > 전체 (요소들의 갯수 순서대로 라고 볼 수 있음)
+  - 최종 우선 순위: 아이디 > 클래스 > 태그 > 전체 (요소들의 갯수 순서대로 라고 볼 수 있음)
+- Example 1)
 
 ```html
 <body>
