--- a/_posts/Web/2019-02-17-Web06.md
+++ b/_posts/Web/2019-02-17-Web06.md
@@ -2,7 +2,7 @@
 layout: post
 title: Web 06 - Responsive Web, View port, Media Query 
 category: Web
-tags: [Web, HTML]
+tags: [Web, HTML, CSS]
 ---
 
 # Responsive Web
