commment function add; disqus

--- a/_posts/Git/2019-02-10-git02.md
+++ b/_posts/Git/2019-02-10-git02.md
@@ -3,6 +3,7 @@ layout: post
 title: 생활코딩 Git 02 - git의 원리 (gistory, git add, git commit, git status)
 category: Git
 tags: [Git]
+comments: true
 ---
 
 <br>
