--- a/_posts/Web/2019-02-17-Web01.md
+++ b/_posts/Web/2019-02-17-Web01.md
@@ -3,6 +3,7 @@ layout: post
 title: Web 01 - Introduction(Web service & Browser / Http Method / static & Dynamic web)
 category: Web
 tags: [Web]
+comments: true
 ---
 
 
