--- a/_posts/Web/2019-02-17-Web03.md
+++ b/_posts/Web/2019-02-17-Web03.md
@@ -3,6 +3,7 @@ layout: post
 title: Web 03 - CSS, CSS의 기본구성, CSS 스타일의 종류, 선택자, 선택자의 우선순위
 category: Web
 tags: [Web, HTML, CSS]
+comments: true
 ---
 
 
