--- a/_posts/Web/2019-02-17-Web04.md
+++ b/_posts/Web/2019-02-17-Web04.md
@@ -3,6 +3,7 @@ layout: post
 title: Web 04 - CSS의 속성(colors, Font-size, Box Model, Display, Visibility, Position, Backgrounds, Font)
 category: Web
 tags: [Web, HTML, CSS]
+comments: true
 ---
 
 
