--- a/_posts/Web/2019-02-17-Web06.md
+++ b/_posts/Web/2019-02-17-Web06.md
@@ -1,180 +1,245 @@
 ---
 layout: post
-title: Web 06 - Responsive Web, View port, Media Query 
+title: Web 06 - Bootstrap Introduction, Utilities(1)
 category: Web
 tags: [Web, HTML, CSS]
+comments: true
 ---
 
-# Responsive Web
-
-- 반응형 웹 디자인(responsive web design, RWD)이란 하나의 웹사이트에서 PC, 스마트폰, 태블릿 PC 등 접속하는 디스플레이의 종류에 따라 화면의 크기가 자동으로 변하도록 만든 웹페이지 접근 기법을 말함.
-
-- CSS 및 HTML을 사용하여 내용을 조정, 숨기기, 축소, 확대 또는 이동하여 화면에서 보기 좋게 만드는 형식
 
 
+# CSS Framework / Bootstrap
+
+> 까다로운 CSS 레이아웃을 손쉽게 만들어주는 소프트웨어 프레임 워크
+>
+> > A CSS framework is a software framework that is meant to allow for easier, more standards-compliant web design using the Cascading Style Sheets language.
+>
 
 
-### View port
 
-- view port는 가로 해상도를 의미하며, 웹페이지의 사용자가 볼 수 있는 영역을 말함.
-- 뷰포트는 모바일기기에 화면이 로드 되었을 때, 페이지가 적정 해상도로 로드 될수 있도록 돕고 확대나 축소를 허용할 것인지 결정 해줌.
-- 뷰포트는 장치에 따라 다름 (휴대폰화면은 컴퓨터 화면 보다 작음) 
-- View port의 기본 설정
-  - VS CODE 자동 완성 기능을 통해 view port를 meta tag로서 head 요소 안에 넣어 놓고 진행 해옴.
+### CDN
+
+- CDN: Content Deliver (Distribution) Network
+
+- 컨텐츠(CSS, JS, Image, Text등)을 효율적으로 전달 하기 위해 여러 노드에 가진 네트워크에 데이터를 제공하는 시스템. (컴퓨터에 폰트가 없는 경우, 구글에서 제공하는 웹폰트를 사용하여 적용하는 것과 비슷한 방식)
+  - 개별 end-user의 가까운 서버를 통해 빠르게 전달 가능(지리적 이점)
+  - 외부 서버를 활용함로써 본인 서버의 부하가 적어짐
+  - CDN은 보통 적절한 수준의 캐시 설정으로 빠르게 로딩 할 수 있음.
+
+
+
+cf) Reboot / Reset CSS / normalize CSS
+
+​     브라우져가 들고 있는 CSS를 초기화시킴. (모든 브라우져에서 똑같이 보이게 하기 위한  친구)
+
+
+
+### Bootstrap 기본 설정
+
+- Bootstrap의 CSS와 자바스크립트(JS)를 CDN을 통해 활용하기 위해 아래의 코드를 적용
+
+
+```HTML
+<!-- CSS -->
+<head>
+   <link rel="stylesheet" 	 href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+</head>
+
+<body>
+<!-- JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" 
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" 
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" 
+        crossorigin="anonymous"></script>   
+</body>
+```
+
+
+
+# Utilities
+
+## 1. spacing
+
+- margin과 padding 등 여백과 공간을 설정
+- https://getbootstrap.com/docs/4.2/utilities/spacing/
 
 ```html
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+<body>
+    <--! margin -->
+    <h1 class="m-0"> margin의 space를 전부 0으로 </h1>
+    <h1 class="mx-0"> x축(좌,우) space를 0으로 </h1>
+    <h1 class="my-0"> y축(위,아래) space를 0으로 </h1>
+    <h1 class="mt-0"> 위 space를 0으로 </h1>
+    <h1 class="mb-0"> 아래 space를 0으로 </h1>
+    <h1 class="ml-0"> 왼쪽 space를 0으로 </h1>
+	<h1 class="mr-0"> 오른쪽 space를 0으로 </h1>
+    
+    <--! padding -->
+    <h1 class="p-0"> padding의 space를 전부 0으로 </h1>
+    <h1 class="px-0"> x축(좌,우) space를 0으로 </h1>
+    <h1 class="py-0"> y축(위,아래) space를 0으로 </h1>
+    <h1 class="pt-0"> 위 space를 0으로 </h1>
+    <h1 class="pb-0"> 아래 space를 0으로 </h1>
+    <h1 class="pl-0"> 왼쪽 space를 0으로 </h1>
+	<h1 class="pr-0"> 오른쪽 space를 0으로 </h1>
+   
+    <-- 브라우져의 기본 rem은 16px -->
+    <h1 class="m-0"> 0은 0rem 	=> 0px </h1>
+    <h1 class="m-1"> 1은 0.25rem => 4px </h1>
+    <h1 class="m-2"> 2은 0.5rem  => 8px </h1>
+    <h1 class="m-3"> 3은 1rem    => 16px </h1>
+    <h1 class="m-4"> 4은 1.5rem  => 24px </h1>
+    <h1 class="m-5"> 5은 3rem    => 48px </h1>
+     
+    <--! 음수도 가능 -->
+    <h1 class="mt-n5"> margin의 위(top)의 space를 -48px 
+        			   (=48px만큼 위로 이동) 		
+    </h1>    
+    
+    <--! 자동으로 설정 -->
+    <h1 class="m-auto"> space를 자동으로 설정 </h1>      
+
+</body>
 ```
 
 
 
+## 2. Color
 
-
-# Media query
-
-- media query는 화면의 종류와 크기에 따라서 디자인을 달리 줄 수 있는 CSS의 기능. 
-
-- 특히 최근의 트랜드인 반응형 디자인의 핵심 기술이라고 할 수 있음.
-
-
-[media query]: https://www.youtube.com/watch?v=y3Zx-nVH25s	"생활코딩 media query 강의"
+- 텍스트 및 배경의 색상을 설정 
+- https://getbootstrap.com/docs/4.2/utilities/colors/
 
 
 
-## 기본구성(syntax)
+- ### Text color
 
-```css
-@media only|not mediatype and|not|,(or) (media feature) { CSS스타일코드;}
-```
-
-- not: 부정
-- only: 말 그대로 only - 이것만
-- media type(매체유형)
-  - all(모든 미디어; 기본값)
-  - screen(화면이 달린 기기; 스마트폰, 태블릿 PC등)
-  - print(프린터 기기)
-  - braille(점자표시장치)
-  - tv(음성과 영상이 동시 출력되는 TV)
-- and 또는 , (or): 조건
-- media feature(표현식): 특정 조건을 입력. 예) `min-width: 800px`
+![](https://www.freewebmentor.com/wp-content/uploads/2017/09/bootstrap-text-color-css-classes.png)
 
 
 
-## Media query의 대표적인 조건
+- ### Background color
 
-### 1. width
+![bg color](https://www.beststarsofyear.com/wp-content/uploads/2018/07/new-page-background-color-bootstrap-lovely-bootstrap-4-everything-you-of-page-background-color-bootstrap.jpg)
 
-- viewport의 너비를 의미하며, 일반적으로 가장 많이 사용 하는 조건.
-- h2 태그의 색상을 기본적으로 녹색으로 설정하며, 너비가 800px이 되면, 노란색으로 색상이 변경됨
 
-```css
-h2 {
-    color: green;
-}
 
-@media (width: 800px) {
-    h2 {
-        color: yellow;
-    }
-}
+- 예시 코드
 
+```html
+<body>
+    <-- background: primary 색상 / text: sucess 색상 적용 -->
+    <p class="bg-primary text-success">Lorem ipsum dolor sit</p>
+</body>
 ```
 
 
 
-### 2. min-width  / max-width
+## 3. Border
 
-- h3태그의 기본 색상은 회색
-- viewport의 너비가 min 600 px 와 max 800 px 조건을 만족할 경우, 색상이 보라색으로 변경됨
-
-```css
-h3 {
-    color:gray;
-}
-
-@media (min-width:600px) and (max-width: 800px) {
-    h3 {
-        color: purple;
-    }
-}
+```html
+<body>
+    <--! 테두리 삽입 -->
+    <p class="border">Lorem ipsum dolor sit</p>
+        
+    <--! 테두리 색상을 Primary로 변경(border을 넣고 추가로 border-이하를 삽입할 것) -->
+    <p class="border border-primary">Lorem ipsum dolor sit</p>
+    
+    <--! 테두리 모양 변경 -->
+    <p class="border border-rounded">박스 모서리만 둥글게</p>
+    <p class="border border-rounded-circle">박스 전체를 둥글게</p>
+    <p class="border border-rounded-pill">박스 양 끝을 둥글게(알약 모양)</p>
+</body>
 ```
 
 
 
-### 3. height /  min-height / max-height
+## 4. Display
 
-- h4 태그의 기본색상은 Orange
-- viewport의 높이(세로 길이)가 min 400 px 와 max 600 px을 만족할 경우, 색상은 검정으로 변경됨
+```html
+<body>
+    <a class="d-block"> 태그 안의 내용을 블록 속성으로 변경 </a>
+    <a class="d-inline"> 태그 안의 내용을 인라인 속성으로 변경 </a>
+    <a class="d-inline-block"> 태그 안의 내용을 인라인-블록 속성으로 변경 </a>
+    <a class="d-none"> 태그 안의 내용을 숨기기 </a>
+    
+    <a class="d-sm-none"> 태그 안의 내용을 sm보다 작을 때 none을 주기 
+    					  sm; small device - 750px
+        			      따라서, 태그안 내용이 750px보다 작으면 none이 됨.
+    </a>
+    
+    <-- 테두리 색상을 Primary로 변경(border을 넣고 추가로 border-이하를 삽입할 것) -->
+    <a class="border border-primary">Lorem ipsum dolor sit</p>
+    
 
-```css
-h4 {
-    color: orange;
-}
-@media (min-height: 400px) and (max-height: 600px) {
-    h4 {
-        color: black;
-    }
-}
+</body>
+```
+
+ 
+
+*Bootstrap의 breakpoint*
+
+> ![breakpoint](https://wpmaster.com/wp-content/uploads/2017/02/bootstrap-4-grid.jpg)
+
+
+
+## 5. Position
+
+```html
+<body>
+    <a class="position-static"> 박스의 position을 static으로 설정 </a>
+    <a class="position-aboslute"> 박스의 position을 absolute으로 설정 </a>
+    <a class="position-relative"> 박스의 position을 relative으로 설정 </a>
+    <a class="position-fixed"> 박스의 position을 fixed으로 설정 </a>
+    
+   	<-- fixed position은 추가로 고정 위치를 설정 할 수 있음 -->
+    <a class="position-fixed fixed-top"> fixed + 위치는 위 </a>
+    <a class="position-fixed fixed-bottom"> fixed + 위치는 아래 </a>
+    <a class="position-fixed fixed-left"> fixed + 위치는 왼쪽 </a>
+    <a class="position-fixed fixed-right"> fixed + 위치는 오른쪽 </a>
+   
+</body>
 ```
 
 
 
-### 4. orientation
+## 6. Text/Font
 
-- 가상 선택자 `::after`  을 활용하여, view port의 방향에 따라 조건 적용
-- view port의 방향이 가로일때는 '가로입니다' 출력
-- view port의 방향이 세로일때는 '세로입니다' 출력
-
-```css
-h1.ori::after {
-    content: '가로입니다'
-
-}
-
-@media (orientation: portrait) {
-    h1.ori::after {
-        content: '세로입니다.'
-    }
-}
+```html
+<body>
+   	<-- text 정렬  -->
+    <a class="text-center"> 특정한 박스의 콘텐츠를 가운데 정렬 </a>
+    <a class="text-right"> 특정한 박스의 콘텐츠를 오른쪽 정렬 </a>
+    <a class="text-left"> 특정한 박스의 콘텐츠를 왼쪽 정렬 </a>
+    <a class="position-fixed"> 박스의 position을 fixed으로 설정 </a>
+        
+   	<-- font style 적용  -->
+    <a class="font-weight-normal"> text의 기본값(Default) </a>
+    <a class="font-weight-bold"> text를 굵게 </a>
+    <a class="font-weight-bolder"> text를 더 굵게 </a>
+    <a class="font-weight-light"> text를 연하게 </a>
+    <a class="font-weight-lighter"> text를 더 연하게 </a>    
+    <a class="font-italic"> text를 기울임 </a>
+        
+</body>
 ```
 
 
 
-### 5. 응용:  Bootstrap의 Break point 흉내내기
+## 7. Layout
 
-```css
-/* Extra small: 0~576px */
-.rainbow {
-    color: red;
-}
+- container: 기본으로 깔고 가는 bootstrap의 basic layout element
+- 기본적으로 양쪽 끝에 공백이 있음.
+- 공백을 최소화 하고 싶을땐? `.container-fluid` 입력
 
-/* Small: 576px 이상 */
-@media (min-width: 576px) {
-    .rainbow {
-        color: orange;
-    }
-}
-
-/* Medium: 768px 이상 */
-@media (min-width: 768px) {
-    .rainbow {
-        color: yellow;
-    }
-}
-
-/* Large: 992px 이상 */
-@media (min-width: 992px) {
-    .rainbow {
-        color: green;
-    }
-}
-
-/* Extra Large: 1200px 이상 */
-@media (min-width: 1200px) {
-    .rainbow {
-        color: blue;
-    }
-}
+```html
+<div class="container">
+  <!-- Content here -->
+</div>
 ```
+
+
