Markdown style update, google search console

--- a/_posts/Web/2019-02-17-Web03.md
+++ b/_posts/Web/2019-02-17-Web03.md
@@ -11,25 +11,17 @@ comments: true
 # CSS
 
 > CSS(Cascading Stype Sheets):  마크업 언어(HTML)이 실제 표시되는 방법을 기술하는 언어.
->
 > HTML이 웹사이트의 몸체를 담당한다면,  CSS는 옷, 엑세서리와 같이 웹사이트를 꾸미는 역할을 담당한다.
->
-
-
 
 > 웹 표준은 이제 더 이상 무시할 수 없는 키워드입니다. 
->
 > World Wide Web(WWW)의 의미대로 가능한 많은 사람이 웹을 이용하기 위해서는, 모든 브라우저에서 ‘똑같이 보이는 것’이 아니라 ‘각 브라우저에 알맞게 보이는 것’이 중요하기 때문입니다. 
->
 > 그래서 웹 표준에서는 구조(Constructure)와 표현(Presentation)과 행위(Behavior)를 각각 분리해서 개발하기를 권유합니다. 
->
 > 이렇게 하면, 각 사용자는 구조화 된 마크업에 따라 다양한 디자인을 제공받을 수 있기 때문입니다. 뿐만 아니라 사이트의 로딩속도도 빨라지고 개발과 유지보수 또한 쉬워집니다.
->
 > - 구조 : 웹 콘텐츠에 의미를 부여하고 구조를 형성 → HTML
 > - 표현 : 시각적인 디자인과 레이아웃 표현 → CSS
 > - 행위 : 모든 front-end의 브라우저 상호작용을 담당 → JavaScript
->
->   ​						  						  	출처: http://www.nextree.co.kr/p8468/
+>   	​						  						  	
+>   									출처: http://www.nextree.co.kr/p8468/
 
 
 
@@ -42,9 +34,11 @@ comments: true
 
 
 
-
+<br>
 
 # CSS의 기본 구성
+
+
 
 ```html
 <!DOCTYPE html>
@@ -65,7 +59,7 @@ comments: true
 - `h1(선택자) + {color: red;}(선언블록)` : 규칙(Rule)
 - `규칙 묶음` : 스타일 시트(stylesheet)
 
-
+<br>
 
 # CSS 스타일의 종류
 
@@ -104,7 +98,7 @@ comments: true
 </head>
 ```
 
-
+<br>
 
 # 선택자 (Selector)
 
@@ -291,7 +285,7 @@ a[target="_self"] {
 - Example 2)
   - CSS의 선택자는 아래의 우선순위를 가짐.
 
-```HTML
+```html
 <body>
     <div>
         <h1 id="toffee" class="latte" style="color: green;">아이스 토피넛 라떼</h1>
@@ -301,7 +295,7 @@ a[target="_self"] {
 
 
 
-```CSS
+```css
 /* 우선순위가 낮은 것부터 적용 */
 
 /* 6. 상위 객체에 의해 상속된 속성 */
