--- a/_posts/Web/2019-02-17-Web06.md
+++ b/_posts/Web/2019-02-17-Web06.md
@@ -12,15 +12,13 @@ comments: true
 
 > 까다로운 CSS 레이아웃을 손쉽게 만들어주는 소프트웨어 프레임 워크
 >
-> > A CSS framework is a software framework that is meant to allow for easier, more standards-compliant web design using the Cascading Style Sheets language.
->
+> A CSS framework is a software framework that is meant to allow for easier, more standards-compliant web design using the Cascading Style Sheets language.
 
 
 
 ### CDN
 
 - CDN: Content Deliver (Distribution) Network
-
 - 컨텐츠(CSS, JS, Image, Text등)을 효율적으로 전달 하기 위해 여러 노드에 가진 네트워크에 데이터를 제공하는 시스템. (컴퓨터에 폰트가 없는 경우, 구글에서 제공하는 웹폰트를 사용하여 적용하는 것과 비슷한 방식)
   - 개별 end-user의 가까운 서버를 통해 빠르게 전달 가능(지리적 이점)
   - 외부 서버를 활용함로써 본인 서버의 부하가 적어짐
@@ -29,7 +27,6 @@ comments: true
 
 
 cf) Reboot / Reset CSS / normalize CSS
-
 ​     브라우져가 들고 있는 CSS를 초기화시킴. (모든 브라우져에서 똑같이 보이게 하기 위한  친구)
 
 
@@ -47,22 +44,15 @@ cf) Reboot / Reset CSS / normalize CSS
 
 <body>
 <!-- JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" 
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" 
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" 
-        crossorigin="anonymous"></script>   
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>   
 </body>
 ```
 
 
 
 # Utilities
-
 ## 1. spacing
 
 - margin과 padding 등 여백과 공간을 설정
@@ -129,7 +119,6 @@ cf) Reboot / Reset CSS / normalize CSS
 
 
 - 예시 코드
-
 ```html
 <body>
     <-- background: primary 색상 / text: sucess 색상 적용 -->
@@ -167,9 +156,10 @@ cf) Reboot / Reset CSS / normalize CSS
     <a class="d-inline-block"> 태그 안의 내용을 인라인-블록 속성으로 변경 </a>
     <a class="d-none"> 태그 안의 내용을 숨기기 </a>
     
-    <a class="d-sm-none"> 태그 안의 내용을 sm보다 작을 때 none을 주기 
-    					  sm; small device - 750px
-        			      따라서, 태그안 내용이 750px보다 작으면 none이 됨.
+    <a class="d-sm-none"> 
+     태그 안의 내용을 sm보다 작을 때 none을 주기 
+     sm; small device - 750px
+     따라서, 태그안 내용이 750px보다 작으면 none이 됨.
     </a>
     
     <-- 테두리 색상을 Primary로 변경(border을 넣고 추가로 border-이하를 삽입할 것) -->
