--- a/_posts/Web/2019-02-17-Web07.md
+++ b/_posts/Web/2019-02-17-Web07.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Web 07 - Grid System, Flex
+title: Web 07 - Bootstrap Utilities(2) - Grid System, Flex
 category: Web
 tags: [Web, HTML, CSS]
 comments: true
@@ -11,13 +11,9 @@ comments: true
 # 8. Grid System
 
 - 일련의 컨테이너, 행 및 열을 사용하여 내용을 정렬하고 구성하는 시스템.
-
 - 12개의 열(Column)으로 기본적으로 나뉘어져 있음. 
-
-  (열이 12개인 이유? 12개가 활용도가 제일 높음 / 약수 多)
-
+  - 열이 12개인 이유? 12개가 활용도가 제일 높음 / 약수 多
 - 기본적인 구성:  `container`  > `row`  > `col-4`  
-
   - Grid System은 열(Column) 을 기준으로만 나뉘어져있음. 그러므로, 다른 행에 대해서 다른 Grid를 적용하기 위해, `row` 를 넣어줌.
 
 ```html
@@ -93,12 +89,9 @@ comments: true
 
 
 - break point를 활용하여 화면크기에 따라 컬럼 갯수를 다르게 설정할 수 있음.
-
   - 기본 설정: col-4  (4칸씩 3개의 박스가 2줄 생김)
+  - 창이 768 px을 초과시, 컬럼을 2개씩 차지하는 것으로 변경 (2칸씩 6개의 박스가 생김 => 1줄)
 
-  - 창이 768 px을 초과하면 컬럼을 2개씩 차지하는 것으로 변경
-
-    (2칸씩 6개의 박스가 생김 => 1줄)
 
 ```html
 <div class="container mb-5">
@@ -220,7 +213,6 @@ comments: true
 ### 6) align-self
 
 - flex 내 개별 요소에 적용할 수 있는 또 다른 속성.
-
 - 이 속성은 align-items가 사용하는 값들을 인자로 받으며, 그 값들은 지정한 요소에만 적용됨.
   - `flex-start` : 특정 요소를 컨테이너의 꼭대기로 정렬
   - `flex-end` : 특정 요소를 컨테이너의 바닥으로 정렬
@@ -299,9 +291,7 @@ comments: true
 ### Flex 관련 reference
 
 > https://css-tricks.com/snippets/css/a-guide-to-flexbox/
->
 > http://www.beautifulcss.com/archives/1263
->
 > http://flexboxfroggy.com/#ko
 
 
