--- a/_posts/Web/2019-02-17-Web07.md
+++ b/_posts/Web/2019-02-17-Web07.md
@@ -2,7 +2,7 @@
 layout: post
 title: Web 07 - Bootstrap Utilities(2) - Grid System, Flex
 category: Web
-tags: [Web, HTML, CSS]
+tags: [Web, HTML, CSS, Bootstrap]
 comments: true
 ---
 
