--- a/_posts/Web/2019-02-17-Web06.md
+++ b/_posts/Web/2019-02-17-Web06.md
@@ -2,7 +2,7 @@
 layout: post
 title: Web 06 - Bootstrap Introduction, Utilities(1)
 category: Web
-tags: [Web, HTML, CSS]
+tags: [Web, HTML, CSS, Bootstrap]
 comments: true
 ---
 
