favicon, icon change

--- a/_posts/Web/2019-02-17-Web04.md
+++ b/_posts/Web/2019-02-17-Web04.md
@@ -155,16 +155,11 @@ https://www.w3schools.com/css/css_units.asp
 ### padding & margin
 
 - `padding` :  border 의 안쪽 여백
-
 - `margin` : border의 바깥쪽 여백
-
   - `padding: 25px` 와 같이, 상/하/좌/우의 여백을 동시에 줄 수도 있으며,
-
   - `padding-top: 25px` 와 같이, 개별적으로 여백을 적용 할 수 있다.
-
-    cf) `padding: 25px 20px 15px 10px`  처럼, 연속적으로 각각의 여백을 한줄로 표현도 가능.
-
-    ​      순서는 위부터 시계 방향(위 / 오른쪽 / 아래 / 왼쪽)
+    - cf) `padding: 25px 20px 15px 10px`  처럼, 연속적으로 각각의 여백을 한줄로 표현도 가능. 
+  - 순서는 위부터 시계 방향(위 / 오른쪽 / 아래 / 왼쪽)
 
 ```html
 <head>
@@ -189,15 +184,10 @@ https://www.w3schools.com/css/css_units.asp
 # border
 
 - `border-width` : 테두리의 두께
-
 - `border-style` : 테두리의 스타일
-
 - `border-color` : 테두리 색상
-
-  cf)  `border: 2px solid purple;` 처럼 또한 연속적으로 테두리에 대한 설정을 할 수 있음.
-
-  ​       순서는 두께 > 스타일 > 색상 순임.
-
+  - cf)  `border: 2px solid purple;` 처럼 또한 연속적으로 테두리에 대한 설정을 할 수 있음
+  - 순서는 두께 > 스타일 > 색상 순임.
 - `border-radius` : 테두리 모서리 둥글기 정도
 
 ```html
@@ -398,32 +388,21 @@ https://www.w3schools.com/css/css_units.asp
 # Background
 
 > CSS background의 속성은 선택자의 배경 효과를 설정하는데 사용
->
 > The CSS background properties are used to define the background effects for elements.
->
 
 - `background-color` : 배경 색상 설정
-
 - `background-image ` : 이미지 설정. 예) `url(images/minsu.jpg);` 
-
 - `background-position` : 가로 세로 초점 이동 설정 
-
-  예) `background-position: center center` ​	
-
+  - 예) `background-position: center center` ​	
 - `background-size` : 배경의 크기 설정
-
   - 직접 수치 입력 (예. 200px 200px)
   - `contain` : 이미지가 완전히 보이도록 배경 이미지 크기 조정
   - `cover` : 전체 컨테이너를 덮을 수 있도록 배경 이미지 크기 조정
-
 - `background-repeat` : 배경 이미지 반복 설정
-
   - `no repeat`: 반복하지 않음. (이미지는 1번만 표시)
   - `repeat`: 가로/세로로 반복. 적합하지 않을 시, 마지막 이미지가 잘림.
   - `initial`: 속성을 기본값으로 설정
-
 - `background-attachment` : 배경 이미지 고정 / 스크롤 여부 설정
-
   - `scroll`: 배경이미지가 페이지와 함께 스크롤됨 (기본값)
   - `fixed`: 배경이미지가 페이지와 함께 스크롤 되지 않음
 
@@ -453,7 +432,6 @@ div {
 # Font
 
 - `font-size` : font의 크기 설정
-
 - `font-style` :  font의 스타일 설정
 - `font-weight`: font의 굵음의 정도 설정 (일반적으로 100~900 사이)
 - `font-family` : font 종류를 지정
