--- a/_posts/Web/2019-02-18-Web08.md
+++ b/_posts/Web/2019-02-18-Web08.md
@@ -291,10 +291,7 @@ comments: true
 ## 13. Spinners
 
 - `<span class="sr-only">Loading...</span>` 부분을 빼도 정상적으로 작동을 함. 
-
-- 그러나, 움직이는 이미지나 사진 등을 보지 못하는 유저를 위해 sr-only(screen reader) 클래스를 
-
-  입력하여 이 이미지가 무엇인지 컴퓨터가 인식할 수  있음. (비슷한 예. `alt=value`)
+- 그러나, 움직이는 이미지나 사진 등을 보지 못하는 유저를 위해 sr-only(screen reader) 클래스 입력하여 이미지가 무엇인지 컴퓨터가 인식할 수  있음. (비슷한 예. `alt=value`)
 
 ```html
 <div class="spinner-border" role="status">
