--- a/_posts/Algorithm/2019-02-26-3_5102_node_distance.md
+++ b/_posts/Algorithm/2019-02-26-3_5102_node_distance.md
@@ -18,8 +18,8 @@ comments: true
 
 # 나의 코드
 
-- BFS 와 Queue를 활용한 문제이며, 미로 => 그래프로 문제의 유형만 바뀌었을 뿐, 전반적인 맥락을 동일하다.
-- 이 문제는 방향성이 없으므로 MyMap(좌표) 안 \[start][end] 와 \[end][start] 에 모두에 경로를 찍었으며,  노드중에 간선이 연결되지 않는 경우를 고려하여 BFS 함수 내에 또다른 `return` 을 입력하였다.
+- BFS 와 Queue를 활용한 문제이며, 미로 => 그래프로 문제의 유형만 바뀌었을 뿐,  전반적인 맥락을 동일하다.
+- 이 문제는 방향성이 없으므로 MyMap(좌표) 안 \[start][end] 와 \[end][start] 두 곳 모두 경로를 찍었으며,  노드중에 간선이 연결되지 않는 경우를 고려하여 BFS 함수 내에 또다른 `return` 을 입력하였다.
 
 
 ```python
