--- a/_posts/Django/2019-04-27-Django06_CRUD3.md
+++ b/_posts/Django/2019-04-27-Django06_CRUD3.md
@@ -94,9 +94,10 @@ urlpatterns = [
   - 기존에 입력된 내용을 보기 위해, 템플릿 변수로 연결된 post라는 인스턴스의 멤버변수인 `post.title` 와 `post.content` 를  value 속성의 값으로 저장.
   - 이를 통해 edit.html이 실행될 때, input 태그의 value에 기존의 데이터를 볼 수 있게됨.
   - 어떠한 레코드를 수정하는지에 대한 정보가 들어가야하므로, `post.pk`  변수는 `variable routing`으로 사용하여, update주소로 요청을 보냄.
-  - 요청방식은 `POST`가 사용되었기 때문에, 추가로 `{% csrf_token %}` 을 입력.
+  - 요청방식은 `POST`가 사용되었기 때문에, 추가로 `csrf_token` 을 입력.
 
 ```html
+{% raw %}
 <body>
     <h1>Post Edit</h1>
     <form action="/posts/{{ post.pk }}/update/", method="POST">
@@ -106,6 +107,7 @@ urlpatterns = [
         <input type="submit" value="Submit"/>
     </form>
 </body>
+{% endraw %}
 ```
 
 
