recognized Liquid tag error fix 1

--- a/_posts/Django/2019-04-27-Django06_CRUD3.md
+++ b/_posts/Django/2019-04-27-Django06_CRUD3.md
@@ -76,9 +76,9 @@ urlpatterns = [
 데이터베이스에 내용을 저장하는 행위는 단지, 데이터를 가져오는 역할을 하는 GET 방식보다는 POST 방식과 더 적합하다. 또한, POST 방식으로 데이터를 실어서 요청을 보낼 경우, 주소창에 데이터가 표시되지 않으므로 보안적인 측면에도 더 낫음.
 
 ```html
-<-- new.html -->
+<--! new.html -->
 <form action="/posts/create/", method="post">
-{% csrf_token %}
+{% raw %}{% csrf_token %}{% endraw %}
 ```
 
 > CSRF: 사이트 간 요청 위조(Cross-site Request Forgery)
