Markdown template error fix

--- a/_posts/Django/2019-04-27-Django07_CRUD4.md
+++ b/_posts/Django/2019-04-27-Django07_CRUD4.md
@@ -53,16 +53,14 @@ urlpatterns = [
 
 ### Update(	Edit & Update 페이지 구현)
 
-> 게시판 글을 수정하기 위해서는 어떠한 레코드를 수정할건지에 대한 정보가 필요하므로 다시 id값을 받아야함.
->
+> 게시판 글을 수정하기 위해서는 어떠한 레코드를 수정할건지에 대한 정보가 필요하므로 다시 id값을 받아야함. 
 > new & create 페이지에서 우리는 아래와 같이 페이지의 역할을 구분했었음.
 >
 > - `new.html`: 내용 입력 Form을 작성. 작성된 내용을 `/posts/create/`로 전달하는요청을 보냄
 > - `create` 함수: `/posts/create/` 로 url이 접근되면, 함수가 실행되어, 데이터베이스에 내용을 저장시킴.
 >
-> 마찬가지로, 게시판 글을 수정하는 페이지도 역할을 아래와 같이 2가지로 구분하여 작성해야함.
->
-> - `edit.html` : 내용을 수정하는 Form을 작성하는 페이지, 수정된 내용을 `posts/[id값(템플릿변수)]/update`으로 전달하는 요청을 보냄. 
+> 마찬가지로, 글을 수정하는 페이지도 역할을 아래와 같이 2가지로 구분하여 작성해야함.
+> - `edit.html` : 내용을 수정하는 Form을 작성하는 페이지.수정된 내용을 `posts/[id값(템플릿변수)]/update`으로 전달하는 요청을 보냄. 
 > - `update` 함수 : `posts/[id값(템플릿변수)]/update` url을 사용자가 입력하면 update 함수가 실행됨.
 
 
