190603 | commit | Django | 사용자인증 & 권한 관리

--- a/_posts/Django/2019-04-27-Django06_CRUD3.md
+++ b/_posts/Django/2019-04-27-Django06_CRUD3.md
@@ -37,9 +37,9 @@ def index(request):
 <body>
     <a href="/posts/new/">New - 새로운 글쓰기</a>
     <ul>
-    {% for post in posts %}
+    {% raw %}{% for post in posts %}{% endraw %}
         <li><a href="/posts/{{post.pk}}/">{{ post.title }}</a></li>    
-    {% endfor %}
+    {% raw %}{% endfor %}{% endraw %}
     </ul>
 </body>
 ```
@@ -89,7 +89,7 @@ urlpatterns = [
 - CSRF token은 보안상의 목적으로 사용. token을 넣어줘야 token과 함께 `create` 페이지에 요청을 보냄. 장고에서  csrf token을 가지고,  피하식별 하듯이, 우리 사이트에서 보낸 요청이라는 것을 확실히 알 수 있게 됨.
 - Post 메소드를 쓸 때는 반드시 `csrf_token`이 있어야함.
 
-```PYTHON
+```python
 from django.shortcuts import render, redirect
 
 def create(request):
