190616 | TIL | Django | 이미지다루기 & 트렌젝션

--- a/_posts/Django/2019-06-13-Django22_image2.md
+++ b/_posts/Django/2019-06-13-Django22_image2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Django 22 - 이미지 다루기(한 Post에 여러 사진 올리기)
+title: Django 22 - 이미지 다루기 1 / 트렌젝션
 category: Django
 tags: [Django]
 comments: true
@@ -10,7 +10,7 @@ comments: true
 
 
 
-# 이미지 다루기(인스타그램 스타일) 
+# 이미지 다루기 1 (인스타그램 스타일) 
 
 > [Django17 미디어 파일 관리 및 업로드 구현](<https://tothefullest08.github.io/django/2019/06/04/Django17_image/>) 포스팅에서 이미지(미디어)파일을 어떻게 업로드하여 관리하고, 재가공하는지에 대해 정리해보았다. 추가로, 하나의 게시글(Post)에 여러 사진을 올리고, 또한 그사진들을 횡으로 보여지도록, 마치 인스타그램 처럼 기능하게끔 내용을 확장키켜보도록 하자.
 
@@ -112,7 +112,7 @@ def create(request):
     else:
         post_form = PostForm()
         image_formset = ImageFormSet()
-    return render(request, 'posts/form.html', {
+    return render(request, 'posts/create.html', {
                                     'post_form': post_form, 
                                     'image_formset':image_formset,
                                     })
@@ -125,8 +125,8 @@ def create(request):
 - POST 방식인 경우에도 마찬가지로 `ImageFormSet` 에 대한 코드를 삽입해야함. 
 - `post_form` 의 두번째 인자에 들어간 `request.FILES`은 삭제한 후, `ImageFormSet` 을 불러와 인자에 각각`request.POST` 와 `request.FILES` 을 입력.
 - `image_formset` 또한 유효성 검증을 통과해야하므로 조건문에 추가.
-- `Post`와 `Image` 는 1:N 관계로, 게시글이 존재해야 이미지를 업로드 할 수 있으므로 순서가 매우 중요하다. 따라서 `post.save()` 로 게시글을 먼저 생성한 후 id 값이 부여 되면 `Image`  모델에 따라 이미지를 저장 시킬 수 있게 된다.
-- 또한, `image_formset` 은 모델(클래스) => 모델폼 으로 래핑이 되어있는데, 이는 일종의 외부 껍데기가 있는 개념이다. 따라서 `image_formset.instance` 로 접근하여 래핑되어있는 데이터를 벗긴다음, 부모 모델의 인스턴스를 저장시켜줘야 한다. (만약 래핑이 되어 있지 않다면 `image_formset.post = post`로 접근이 가능할 것이다.)
+- `Post`와 `Image` 는 1:N 관계로, 게시글이 존재해야 이미지를 업로드 할 수 있으므로 순서가 매우 중요하다. 따라서 `post.save()` 로 게시글을 먼저 생성한 후 id 값이 부여 되면 `post`가 외래키로 사용가능하게되고 `Image` 모델에 따라 이미지를 저장 시킬 수 있게 된다.
+- 또한, `image_formset` 은 모델(클래스) => 모델폼 으로 래핑이 되어있는데, 이는 일종의 외부에 껍데기가 씌인  개념이다. 따라서 `image_formset.instance` 로 접근하여 껍데기를 벗긴 후, 부모 모델의 인스턴스를 저장시켜줘야 한다. (만약 래핑이 되어 있지 않다면 `image_formset.post = post`로 접근이 가능할 것이다.)
 
 ```python
 @login_required
@@ -145,7 +145,7 @@ def create(request):
 
 
 
-### Views.py (3)
+### Views.py (3) - transaction
 
 위의 코드대로 실행을 시킬 경우, 작동이 될 수도 있으나, 이는 완벽한 코드가 아니며 많은 에러가 발생 할 수 있다.
 
@@ -153,4 +153,120 @@ def create(request):
 
 Django ORM이 DB에 요청을 보내 놓고, DB가 역으로 응답을 다시 보내지 않는 이상, Django 는 응답을 기다리지 않고 바로 밑의 코드를 실행시키게 된다. (이를 비동기로 동작한다고 한다)
 
-image_formset
+`post.save()`  코드의 경우, DB가 따로 응답을 보내지 않기 때문에 DB에 실제로 저장이 완료되었는지를 알 수 없다. 예를 들어, 병목 현상으로 인해 DB에 저장되는 시간이 많이 소요될 수 도 있을 것이다.  따라서, `post` 가 DB에 저장되지 않았는데, `image_formset.instance = post` 의 코드가 실행되는 상황이 발생 할 수 있다.
+
+DB의 입장에서는 순서가 보장되지 않기 때문에(ex, 이미지 저장 후, post 저장) Django에서는 위와 같은 상황이 발생하는 것을 막아줘야할 필요가 있음.  이러한 역할을 하는 Django 의 transaction이며 아래와 같이 코드를 작성할 수 있다. 
+
+- `with transaction.atomic()`
+- `from django.db import transaction`  사용을 위해 관련 코드 import 
+
+> transaction은 간단히 말해 작업단위(쪼개질 수 없는 업무처리 단위) 라 할 수 있는데, 여러개의 프로세스가 묶여져 마치 하나처럼 동작하는 방식이라 할 수 있음, 데이터 베이스 충돌을 해결하기 위해서, 둘또는 그이상의 데이터베이스 업데이트를 하나의 작업으로 처리하는 기법을 의미한다.  
+>
+> 그렇기 때문에 성공 아니면 실패 두가지 결과밖에 존재하지 않음.  - Transaction의 원자성(Atomicity)
+>
+> 관련 하기 reference를 추가로 참조해보자!
+>
+> - [공식문서](<https://docs.djangoproject.com/en/1.11/topics/db/transactions/>)
+>
+> - [장고 트랜잭션 활용 - bono님의 블로그](<https://blueshw.github.io/2016/01/16/django-migration/>)
+> - [DB 트랜잭션 -  초보몽키님의 블로그](<https://wayhome25.github.io/django/2017/08/01/tsd7-django-query-database2/>)
+>
+> - [트랜잭션이란 도대체 뭐란 말인가 - Spring MVC 님의 블로그](<http://springmvc.egloos.com/495798>)
+
+```python
+from django.db import transaction
+
+@login_required
+def create(request):
+    if request.method == 'POST':
+        post_form = PostForm(request.POST)
+        image_formset = ImageFormSet(request.POST, request.FILES)
+        if post_form.is_valid() and image_formset.is_valid():
+            post = post_form.save(commit=False)
+            post.user = request.user
+            
+            # from django.db import transaction
+            with transaction.atomic():
+                # 첫번째: 실제 DB에 저장
+                post.save()
+                # 두번째
+                image_formset.instance = post
+                image_formset.save() #실제 DB에 저장
+                return redirect('posts:list')
+```
+
+
+
+### views.py 최종 version
+
+- 최종적으로 정리된 코드는 다음과 같음.
+
+```python
+from django.db import transaction
+
+@login_required
+def create(request):
+    if request.method == 'POST':
+        post_form = PostForm(request.POST)
+        image_formset = ImageFormSet(request.POST, request.FILES)
+        if post_form.is_valid() and image_formset.is_valid():
+            post = post_form.save(commit=False)
+            post.user = request.user
+            
+            with transaction.atomic():
+                post.save()
+                image_formset.instance = post
+                image_formset.save() 
+                return redirect('posts:list')
+    else:
+        post_form = PostForm()
+        image_formset = ImageFormSet()
+        
+    return render(request, 'posts/create.html', {
+                                    'post_form': post_form, 
+                                    'image_formset':image_formset,
+                                    })            
+```
+
+
+
+### create.html 
+
+- 템플릿 변수로 넘긴 모델 폼셋(`image_formset`)을 진자 템플릿 문법을 통하여 입력
+
+```html
+{% raw %}{% extends 'base.html' %}{% endraw %}
+{% raw %}{% load bootstrap4 %}{% endraw %}
+{% raw %}{% block container %}{% endraw %}
+<h1>New Post</h1>
+
+<form method="post" enctype="multipart/form-data">
+    {% raw %}{% csrf_token %}{% endraw %}
+    {% raw %}{% bootstrap_form post_form %}{% endraw %}
+    <!--추가된 부분 -->
+    {% raw %}{% image_formset.as_p %}{% endraw %}
+    <!--추가된 부분 -->
+    <input type="submit" value="Submit"/>
+</form>
+{% raw %}{% endblock %}{% endraw %}
+```
+
+
+
+### _post.html
+
+- 업로드한 이미지 표시. 1:N 관계 중, 1(`post)`에서 N(`image)`으로 접근할 때는 항상 `_set.all`을 사용하였음. 
+  - 예) `post.image_set` 
+- `post.image_set` 에는 여러장의 이미지가 저장되어있으므로 반복문을 돌려서 표시.
+- `img `태그의 `src` 속성에는 반드시 url까지 입력하도록 하자.
+
+```html
+<div class="card" style="width: 18rem;">
+  <div class="card-header">
+    <span> <a href="{% url 'people' post.user.username %}">{{ post.user.username }} </a></span>
+  </div>
+  {% for image in post.image_set.all %}
+  	<img src="{{ image.file.url }}" class="card-img-top" alt="{{ image.file.image }}">
+  {% endfor %}
+```
+
