190616 | TIL | Django | 이미지다루기 & 트렌젝션

--- a/_posts/Django/2019-06-13-Django22_image2.md
+++ b/_posts/Django/2019-06-13-Django22_image2.md
@@ -263,10 +263,9 @@ def create(request):
 ```html
 <div class="card" style="width: 18rem;">
   <div class="card-header">
-    <span> <a href="{% url 'people' post.user.username %}">{{ post.user.username }} </a></span>
+    <span> <a href="{% raw %}{% url 'people' post.user.username %}{% endraw %}">{% raw %}{{ post.user.username }}{% endraw %} </a></span>
   </div>
-  {% for image in post.image_set.all %}
-  	<img src="{{ image.file.url }}" class="card-img-top" alt="{{ image.file.image }}">
-  {% endfor %}
+  {% raw %}{% for image in post.image_set.all %}{% endraw %}
+  	<img src="{% raw %}{{ image.file.url }}{% endraw %}" class="card-img-top" alt="{% raw %}{{ image.file.image }}{% endraw %}">
+  {% raw %}{% endfor %}{% endraw %}
 ```
-
