190720 | TIL | 알고리즘 복습

--- a/_posts/Algorithm/2019-03-08-1_4880_tournament.md
+++ b/_posts/Algorithm/2019-03-08-1_4880_tournament.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 4880 - 토너먼트 카드게임
+title: [SW 문제해결 기본 - Stack2] SWEA 4880 - 토너먼트 카드게임
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
