--- a/_posts/Algorithm/2019-03-05-3_4834_숫자카드.md
+++ b/_posts/Algorithm/2019-03-05-3_4834_숫자카드.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 4834 - 숫자카드
+title: [SW 문제해결 기본 - LIST1] SWEA 4834 - 숫자카드
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
