--- a/_posts/Algorithm/2019-03-05-4_4835_구간합.md
+++ b/_posts/Algorithm/2019-03-05-4_4835_구간합.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 4835 - 구간합
+title: [SW 문제해결 기본 - LIST1] SWEA 4835 - 구간합
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
