--- a/_posts/Algorithm/2019-03-05-6_4837_부분집합의합.md
+++ b/_posts/Algorithm/2019-03-05-6_4837_부분집합의합.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 4837 - 부분집합의 합
+title: [SW 문제해결 기본 - LIST2] SWEA 4837 - 부분집합의 합
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
