--- a/_posts/Algorithm/2019-03-05-8_4843_특별한정렬.md
+++ b/_posts/Algorithm/2019-03-05-8_4843_특별한정렬.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 4843 - 특별한 정렬
+title: [SW 문제해결 기본 - LIST2] SWEA 4843 - 특별한 정렬
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
