--- a/_posts/Algorithm/2019-03-07-2_4866_괄호검사.md
+++ b/_posts/Algorithm/2019-03-07-2_4866_괄호검사.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 4866 - 괄호 검사
+title: [SW 문제해결 기본 - Stack1] SWEA 4866 - 괄호 검사
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
