--- a/_posts/Algorithm/2019-03-07-4_4873_반복문자지우기.md
+++ b/_posts/Algorithm/2019-03-07-4_4873_반복문자지우기.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 4873 - 반복문자 지우기
+title: [SW 문제해결 기본 - Stack1] SWEA 4873 - 반복문자 지우기
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
