--- a/_posts/Algorithm/2019-03-07-7_4875_미로.md
+++ b/_posts/Algorithm/2019-03-07-7_4875_미로.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 4875 - 미로
+title: [SW 문제해결 기본 - Stack2] SWEA 4875 - 미로
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
