--- a/_posts/Algorithm/2019-03-09-1_5097_회전.md
+++ b/_posts/Algorithm/2019-03-09-1_5097_회전.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 5097 - 회전
+title: [SW 문제해결 기본 - Queue] SWEA 5097 - 회전
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
