--- a/_posts/Algorithm/2019-03-09-2_5105_미로의거리.md
+++ b/_posts/Algorithm/2019-03-09-2_5105_미로의거리.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 5105 - 미로의 거리
+title: [SW 문제해결 기본 - Queue] SWEA 5105 - 미로의 거리
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
