--- a/_posts/Algorithm/2019-03-05-1_4828_min_max.md
+++ b/_posts/Algorithm/2019-03-05-1_4828_min_max.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [SW 문제해결 기본 - LIST1] SWEA 4828 - min max
+title: (SW 문제해결 기본 - LIST1) SWEA 4828 - min max
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
