포스팅 제목 에러 수정

--- a/_posts/Algorithm/2019-03-05-5_4836_색칠하기.md
+++ b/_posts/Algorithm/2019-03-05-5_4836_색칠하기.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [SW 문제해결 기본 - LIST2] SWEA 4836 - 색칠하기
+title: (SW 문제해결 기본 - LIST2) SWEA 4836 - 색칠하기
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
