--- a/_posts/Algorithm/2019-03-05-2_4831_전기버스.md
+++ b/_posts/Algorithm/2019-03-05-2_4831_전기버스.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [SW 문제해결 기본 - LIST1] SWEA 4831 - 전기버스
+title: (SW 문제해결 기본 - LIST1) SWEA 4831 - 전기버스
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
