--- a/_posts/Algorithm/2019-03-07-1_4869_종이붙이기.md
+++ b/_posts/Algorithm/2019-03-07-1_4869_종이붙이기.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [SW 문제해결 기본 - Stack1] SWEA 4869 - 종이붙이기
+title: (SW 문제해결 기본 - Stack1) SWEA 4869 - 종이붙이기
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
