--- a/_posts/Algorithm/2019-03-07-3_4871_그래프경로.md
+++ b/_posts/Algorithm/2019-03-07-3_4871_그래프경로.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [SW 문제해결 기본 - Stack1] SWEA 4871 - 그래프 경로
+title: (SW 문제해결 기본 - Stack1) SWEA 4871 - 그래프 경로
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
