--- a/_posts/Algorithm/2019-03-07-6_4874_Forth.md
+++ b/_posts/Algorithm/2019-03-07-6_4874_Forth.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [SW 문제해결 기본 - Stack2] SWEA 4874 - Forth
+title: (SW 문제해결 기본 - Stack2) SWEA 4874 - Forth
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
