--- a/_posts/Algorithm/2019-03-08-2_4881_min_sum.md
+++ b/_posts/Algorithm/2019-03-08-2_4881_min_sum.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [SW 문제해결 기본 - Stack2] SWEA 4881 - 배열 최소 합
+title: (SW 문제해결 기본 - Stack2) SWEA 4881 - 배열 최소 합
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
