--- a/_posts/Algorithm/2019-03-09-3_5099_피자굽기.md
+++ b/_posts/Algorithm/2019-03-09-3_5099_피자굽기.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [SW 문제해결 기본 - Queue] SWEA 5099 - 피자 굽기
+title: (SW 문제해결 기본 - Queue) SWEA 5099 - 피자 굽기
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
