--- a/_posts/Algorithm/2019-07-20-5_4864_문자열비교.md
+++ b/_posts/Algorithm/2019-07-20-5_4864_문자열비교.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [SW 문제해결 기본 - String] SWEA 4864 - 문자열 비교
+title: (SW 문제해결 기본 - String) SWEA 4864 - 문자열 비교
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
