--- a/_posts/Algorithm/2019-07-20-6_4861_회문.md
+++ b/_posts/Algorithm/2019-07-20-6_4861_회문.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [SW 문제해결 기본 - String] SWEA 4861 - 회문
+title: (SW 문제해결 기본 - String) SWEA 4861 - 회문
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
