--- a/_posts/Algorithm/2019-07-20-8_1216_회문2.md
+++ b/_posts/Algorithm/2019-07-20-8_1216_회문2.md
@@ -25,7 +25,7 @@ for tc in range(1, 11):
     N = 100
     result = 1
 
-    #가로줄 확
+    #가로줄 확인
     Garo_lst = []
     for i in range(N):
         Data = input()
