포스팅 에러 제거

--- a/_posts/Algorithm/2019-07-20-7_4865_글자수.md
+++ b/_posts/Algorithm/2019-07-20-7_4865_글자수.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: (SW 문제해결 기본 - String) SWEA 4861 - 회문
+title: (SW 문제해결 기본 - String) SWEA 4865 - 글자수
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
@@ -10,7 +10,7 @@ comments: true
 
 # 문제
 
--  SWEA 4861 - [파이썬 S/W 문제해결 기본 3일차] String - 회문
+-  SWEA 4865 - [파이썬 S/W 문제해결 기본 3일차] String - 글자수
 -  [문제링크](<https://www.swexpertacademy.com/main/learn/course/subjectDetail.do?courseId=AVuPDN86AAXw5UW6&subjectId=AWOVGOEKqeoDFAWg#>)
 -  문제의 저작권은 SW Expert Academy에 있습니다.
 
@@ -23,33 +23,16 @@ comments: true
 TC = int(input())
 
 for tc in range(1, TC+1):
-    N, M = map(int, input().split())
-    result = []
+    str1 = input()
+    str2 = input()
+    sub_cnt, cnt = 0, 0
 
-    #가로줄 확인
-    Garo_lst = []
-    for i in range(N):
-        Data = input()
-        Garo_lst.append(Data)
-        for i in range(len(Data)-M+1):
-            if Data[i:M+i] == Data[i:M+i][::-1]:
-                result.append(Data[i:M+i])
-
-    #세로줄 확인
-    Sero_lst = []
-    Sero_sub_lst = ''
-    for x in range(N):
-        for y in Garo_lst:
-            Sero_sub_lst += y[x]
-        Sero_lst.append(Sero_sub_lst)
-        Sero_sub_lst =''
-    print(Sero_lst)
-
-    for sero_data in Sero_lst:
-        for j in range(len(sero_data)-M+1):
-            if sero_data[j:M+j] == sero_data[j:M+j][::-1]:
-                result.append(sero_data[j:M+j])
-
-    # print(result)
-    print("#%d %s"%(tc, result[0]))
+    for i in str1:
+        for j in str2:
+            if i == j:
+                sub_cnt += 1
+        if sub_cnt > cnt:
+            cnt = sub_cnt
+        sub_cnt = 0
+    print("#%d %d"%(tc, cnt))
 ```
