알고리즘포스팅 내용 수정

--- a/_posts/Algorithm/2019-08-01-1_5188_최소합.md
+++ b/_posts/Algorithm/2019-08-01-1_5188_최소합.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SWEA 5188 - 최소합
+title: (SW 문제해결 응용 구현 - 완전검색) SWEA 5188 - 최소합
 category: Algorithm
 tags: [Algorithm, SWEA]
 comments: true
@@ -10,7 +10,7 @@ comments: true
 
 # 문제
 
--  SWEA 5188 - 최소합
+-  SWEA 5188 - [파이썬 S/W 문제해결 구현 2일차] 완전검색 - 최소합
 -  [문제링크](<https://www.swexpertacademy.com/main/learn/course/subjectDetail.do?courseId=AVuPDYSqAAbw5UW6&subjectId=AWUYDrI61lYDFAVT#>)
 -  문제의 저작권은 SW Expert Academy에 있습니다.
 
